# fastcontext-integrations

./: .gitignore  LICENSE  README.md  fastcontext_mcp.py  pyproject.toml
docs/: SETUP.md  TROUBLESHOOTING.md
examples/: cline.mcp.json  codex.config.toml  cursor.mcp.json  vscode.mcp.json
examples/claude-code-skill/: SKILL.md
prompts/: fastcontext-usage.md
scripts/: fastcontext-check.sh  make-install-buttons.py
